force-app/main/default/objects/Site_Readiness__c/Site_Readiness__c.object-meta.xml
<CustomObject>
    <label>Site Readiness</label>
    <pluralLabel>Site Readiness Checks</pluralLabel>
    <nameField>
        <label>Site Readiness Name</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>