force-app/main/default/objects/Site_Readiness__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Site Readiness Checks (Field Manager)</relationshipLabel>
    <relationshipName>Site_Readiness_FM</relationshipName>
    <type>Lookup</type>
</CustomField>