force-app/main/default/objects/Site_Readiness__c/fields/FM_Missing__c.field-meta.xml
<CustomField>
    <fullName>FM_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM Missing (Needs Assignment)</label>
    <type>Checkbox</type>
</CustomField>