force-app/main/default/objects/Site_Readiness__c/fields/Not_Ready_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Ready_Reason__c</fullName>
    <label>Not Ready Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>