force-app/main/default/objects/Site_Readiness__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Ready</fullName><default>false</default><label>Ready</label></value>
            <value><fullName>Blocked</fullName><default>false</default><label>Blocked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>