force-app/main/default/objects/Site_Readiness__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Site Readiness Checks</relationshipLabel>
    <relationshipName>Site_Readiness_Checks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>